testdata/networking/sctp/default-deny.yaml
--- 
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: default-deny
spec: 
  podSelector:
