testdata/networking/sctp/sctpclient-upgrade.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: ReplicationController
  metadata:
    labels:
      name: sctpclient
    name: sctpclient
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          name: sctpclient
      spec:
        containers:
        - name: sctpclient
          image:  quay.io/pravin_dsilva/hello-sdn@sha256:76311a85e621e4e54f257c409f20b7092b917fb844092f835363cca9b368f691
