testdata/networking/sctp/sctpclient.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sctpclient
  labels:
    app: sctpclient
spec:
  containers:
    - name: sctpclient
      image:  quay.io/pdsilva1/hello-sdn@sha256:69c21a16084946f58deb75ae99a324d222001d6339e72ebbc6d80d48fd726413
