testdata/networking/sctp/sctpserver-upgrade.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: ReplicationController
  metadata:
    labels:
      name: sctpserver
    name: sctpserver
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          name: sctpserver
      spec:
        containers:
        - name: sctpserver
          image: "quay.io/pravin_dsilva/hello-sdn@sha256:76311a85e621e4e54f257c409f20b7092b917fb844092f835363cca9b368f691"
          ports:
          - containerPort: 30102
            name: sctpserver
            protocol: SCTP
