testdata/networking/sctp/sctpserver.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sctpserver
  labels:
    app: sctpserver
spec:
  containers:
    - name: sctpserver
      image:  quay.io/pdsilva1/hello-sdn@sha256:69c21a16084946f58deb75ae99a324d222001d6339e72ebbc6d80d48fd726413
      ports:
        - containerPort: 30102
          name: sctpserver
          protocol: SCTP
